--- a/src/Vlc.DotNet.Wpf/Vlc.DotNet.Wpf - CLR 2 - .Net 3.5.csproj
+++ b/src/Vlc.DotNet.Wpf/Vlc.DotNet.Wpf - CLR 2 - .Net 3.5.csproj
@@ -43,10 +43,8 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Presentation" />
     <Reference Include="WindowsBase" />
-    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\Vlc.DotNet.Core\Properties\AssemblyInfo.Common.cs">
@@ -54,6 +52,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VlcControl.cs" />
+    <Compile Include="VlcControl.Events.cs" />
     <Compile Include="VlcLibDirectoryNeededEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,10 +63,6 @@
     <ProjectReference Include="..\Vlc.DotNet.Core\Vlc.DotNet.Core - CLR 2 - .Net 3.5.csproj">
       <Project>{3dc694f8-ee9e-4780-9ee8-a84941002609}</Project>
       <Name>Vlc.DotNet.Core - CLR 2 - .Net 3.5</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Vlc.DotNet.Forms\Vlc.DotNet.Forms - CLR 2 - .Net 3.5.csproj">
-      <Project>{6c003397-dccf-43cf-b82d-7b50d4ad70fb}</Project>
-      <Name>Vlc.DotNet.Forms - CLR 2 - .Net 3.5</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
