--- a/src/Vlc.DotNet.Wpf/Vlc.DotNet.Wpf - CLR 4 - .Net 4.0.csproj
+++ b/src/Vlc.DotNet.Wpf/Vlc.DotNet.Wpf - CLR 4 - .Net 4.0.csproj
@@ -44,10 +44,8 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
-    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\Vlc.DotNet.Core\Properties\AssemblyInfo.Common.cs">
@@ -55,6 +53,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VlcControl.cs" />
+    <Compile Include="VlcControl.Events.cs" />
     <Compile Include="VlcLibDirectoryNeededEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,10 +69,6 @@
     <ProjectReference Include="..\Vlc.DotNet.Core\Vlc.DotNet.Core - CLR 4 - .Net 4.0.csproj">
       <Project>{6ea5d03e-bde3-4f4d-b761-f0f380ecc078}</Project>
       <Name>Vlc.DotNet.Core - CLR 4 - .Net 4.0</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Vlc.DotNet.Forms\Vlc.DotNet.Forms - CLR 4 - .Net 4.0.csproj">
-      <Project>{9a7d0ee6-b032-4daa-8ca4-b1ff43c734d3}</Project>
-      <Name>Vlc.DotNet.Forms - CLR 4 - .Net 4.0</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
