--- a/src/Vlc.DotNet.Wpf/Vlc.DotNet.Wpf - CLR 4 - .Net 4.5.csproj
+++ b/src/Vlc.DotNet.Wpf/Vlc.DotNet.Wpf - CLR 4 - .Net 4.5.csproj
@@ -44,11 +44,9 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Presentation" />
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
-    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vlc.DotNet.Core.Interops\Vlc.DotNet.Core.Interops - CLR 4 - .Net 4.5.csproj">
@@ -58,10 +56,6 @@
     <ProjectReference Include="..\Vlc.DotNet.Core\Vlc.DotNet.Core - CLR 4 - .Net 4.5.csproj">
       <Project>{24860783-a729-4a14-98c0-9a34bf138bdb}</Project>
       <Name>Vlc.DotNet.Core - CLR 4 - .Net 4.5</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Vlc.DotNet.Forms\Vlc.DotNet.Forms - CLR 4 - .Net 4.5.csproj">
-      <Project>{914de831-4dfa-44f6-96c1-27cf3b89a2cd}</Project>
-      <Name>Vlc.DotNet.Forms - CLR 4 - .Net 4.5</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -75,6 +69,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VlcControl.cs" />
+    <Compile Include="VlcControl.Events.cs" />
     <Compile Include="VlcLibDirectoryNeededEventArgs.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
